# Condit

./: .gitignore  .travis.yml  BUILD  CMakeLists.txt  CONTRIBUTING.md  README.md  WORKSPACE  state.h  status.cc  status.h  status_test.cc
docs/: conf.py  index.rst
includes/: status.h  status_or.h
src/: status.cc  status.h  status_test.cc
tests/: CMakeLists.txt  status_or_test.cc  status_test.cc
